force-app/main/default/objects/DBM_Report__c/DBM_Report__c.object-meta.xml
<CustomObject>
    <description>Parent object for all details related to a single Dashboard Magic report</description>
    <label>DBM Report</label>
    <nameField>
        <label>DBM Report Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DBM Reports</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>