force-app/main/default/objects/DBM_Report__c/fields/Metric_Type__c.field-meta.xml
<CustomField>
    <fullName>Metric_Type__c</fullName>
    <label>Metric Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Number</fullName>
                <default>true</default>
                <label>Number</label>
            </value>
            <value>
                <fullName>Currency</fullName>
            </value>
            <value>
                <fullName>Percent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>