force-app/main/default/objects/DBM_Report__c/fields/Metric_type_enum__c.field-meta.xml
<CustomField>
    <fullName>Metric_type_enum__c</fullName>
    <formula>IF(CONTAINS(TEXT(Metric_Type__c), &quot;formula&quot;), &quot;formula&quot;,
  IF(CONTAINS(TEXT(Metric_Type__c), &quot;percent&quot;), &quot;percent&quot;,
    &quot;number&quot;
  )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Metric type enum</label>
    <type>Text</type>
</CustomField>