force-app/main/default/objects/DBM_Report__c/fields/Number_of_Groupings__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Groupings__c</fullName>
    <label>Number of Groupings</label>
    <summaryForeignKey>DBM_Report_Grouping__c.Report__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>